versioned_docs/version-22.3/deploy/deployment-option/cloud/create-dedicated-cloud-cluster-aws.mdx
---
title: Create a Dedicated Cloud Cluster on AWS
---

<head>
    <meta name="title" content="Create a Dedicated Cloud Cluster | Redpanda Docs"/>
    <meta name="description" content="Use the Redpanda Cloud to create a Dedicated cloud cluster."/>
</head>

import CreateNamespace from './shared/dedicated/_create-namespace.mdx'

To create a Redpanda cluster in the Dedicated cloud, log in to the Redpanda Cloud, add a namespace, then follow the steps for creating a Dedicated cluster.

## Create a namespace

To prepare to deploy a Dedicated cluster, log in to the Redpanda Cloud UI and add a namespace:

<CreateNamespace/>

## Create a Dedicated cluster

Create a dedicated cluster in your namespace by selecting cluster settings, cloud provider settings, and the network connection type:

1. Scroll to your namespace (namespaces are listed in alphabetical order) and click **+ Add Cluster**.
2. Click **Create Dedicated cluster**.

    The **Create dedicated cluster** page opens at the **Cluster settings** step.
3. (Optional) In **Cluster name**, type a name to replace the default name.
4. Select throughput.

    The choices are 1 MBps, 5 MBps, 10 MBps, and 20 MBps.
5. Open the **Redpanda version** menu and select a version.
6. Click **Next**.

    The **Cloud settings** page opens.
7. For **Provider**, select AWS.
8. Open the **Region** menu and select a region.

    If you plan to create a private network in your own VPC, select the region where your VPC is located.
9. Open the **Zones** menu and select three availability zones for your region.
10. Click **Next**.

    The **Networking** page opens.
11. Under **Connection Type**, select either **Public Network** or **Private - VPC Peering**.
12. Click **Create**.

After the cluster is created, you can click on the cluster name on the **Home** page to see the **Overview** page for that cluster.

If you chose **Private - VPC Peering** for your connection type, see [Adding a VPC Peering Connection](../vpc-peering) to connect your VPC to the Redpanda Cloud VPC.